<resources>
    // Main
    <string name="map">Map</string>
    <string name="login">Login</string>
    <string name="logintext">Enter Name</string>
    <string name="password">Password</string>
    <string name="att">Attempts left</string>
    <string name="loginbutton">Login</string>
    <string name="cancelbutton">cancel</string>
    // home menu
    <string name="app_name">GoEvent</string>
    <string name="myevents">My Events</string>
    <string name="logout">Logout</string>
    <string name="addEvent">Add Event</string>
    // Detail
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">3500</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">1972604729664633</string>
    <string name="eventnname">Name</string>
    <string name="venue">Venue:</string>
    <string name="adress">Address:</string>
    <string name="startTime">Begin time:</string>
    <string name="endTime">End time:</string>
    <string name="eventImg">Image of the event</string>
    <string name="address">Address:</string>
    <string name="goTo">I\'m going</string>
    <string name="alreadGoing">Going</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="City">City</string>
    <string name="Address">Address</string>
    <string name="PostalCode">Postal code</string>
    <string name="Register">Register</string>
    <string name="attendees">Who\'s going?</string>

    <string name="name">Name:</string>
    <string name="street">Street:</string>
    <string name="houseNumber">House Number:</string>
    <string name="city">City:</string>
    <string name="category">Category:</string>
    <string name="Date">Date: (dd-MM-yyyy)</string>
    <string name="StartTime">Start time: (HH:mm)</string>
    <string name="EndTime">End time: (HH:mm)</string>
    <string name="Description">Description:</string>
    <string name="choose_image">Choose image</string>
    <string name="add_event">Add Event</string>
    <string name="coverphoto_for_the_event">Coverphoto for the event</string>
    <string name="attendeesgoing">other(s) are going</string>
</resources>
