<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pxl.be.goevent.Fragments.RegisterFragment"
    android:background="@android:color/black">

    <ScrollView android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:id="@+id/container"
            android:layout_width="match_parent" android:layout_height="match_parent">
            <ListView android:id="@android:id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/userName" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/userName"
                android:inputType="text" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/userPassword" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/password"
                android:inputType="textVisiblePassword" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/email" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/email"
                android:inputType="textEmailAddress" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/firstname" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/firstname"
                android:inputType="text" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/lastname" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/lastname"
                android:inputType="text" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/Address" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/address"
                android:inputType="text" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/City" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/city"
                android:inputType="text" android:textColor="@android:color/white"/>
            <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/PostalCode" android:textColor="@android:color/white"/>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/postalcode"
                android:inputType="number" android:textColor="@android:color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Register"
                android:id="@+id/register"
                android:background="@android:color/holo_red_dark"
                android:layout_margin="5dp"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
