<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5pt">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@string/name"
                android:background="@android:color/white"/>

            <EditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/street"
                android:text="@string/street"
                android:background="@android:color/white"/>

            <EditText
                android:id="@+id/street_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/houseNumber"
                android:text="@string/houseNumber"
                android:background="@android:color/white"/>

            <EditText
                android:id="@+id/houseNumber_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:text="@string/city"
                android:background="@android:color/white"/>

            <EditText
                android:id="@+id/city_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:id="@+id/postcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/PostalCode" />

            <EditText
                android:id="@+id/postcode_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:id="@+id/venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/venue" />

            <EditText
                android:id="@+id/venue_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/category" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_spinner"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"></Spinner>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/Date" />

            <EditText
                android:id="@+id/date_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <TextView
                android:id="@+id/startTime_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/StartTime" />

            <EditText
                android:id="@+id/startTime_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5pt"
                android:background="@android:color/white"
                android:inputType="time" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/EndTime" />

            <EditText
                android:id="@+id/endTime_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5pt"
                android:background="@android:color/white"
                android:inputType="time" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/Description" />

            <EditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginBottom="5pt"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/chooseButton"
                android:text="@string/choose_image"
                android:background="@android:color/holo_red_dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5pt"
                android:id="@+id/addButton"
                android:text="@string/add_event"
                android:background="@android:color/holo_red_dark"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>
