<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pxl.be.goevent.DetailActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView android:text = "@string/description" android:layout_width="wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/description_textview"
            android:layout_alignParentTop = "true"/>


        <TextView
            android:id="@+id/description_content_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description_textview"
            android:layout_marginTop="46dp"
            android:text="description"
            android:textColorHighlight="@android:color/black"
            android:textColorHint="@android:color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_textview"
            android:layout_below="@+id/description_content_textview"
            android:text="@string/location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_content_textview"
            android:layout_toRightOf="@id/location_textview"
            android:layout_below="@+id/description_content_textview"
            android:text="location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_textview"
            android:layout_below="@+id/location_textview"
            android:text="@string/date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_content_textview"
            android:layout_toRightOf="@id/date_textview"
            android:layout_below="@+id/location_content_textview"
            android:text="date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_textview"
            android:layout_below="@+id/date_content_textview"
            android:text="@string/time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_content_textview"
            android:layout_toRightOf="@id/time_textview"
            android:layout_below="@+id/date_content_textview"
            android:text="time"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
